Refactoring to eliminate FindBugs issues